--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,6 +3,6 @@
 - degree: Chickens 
   uni: Chickens University
   year: 1800
-  # awards:Most Dedicated Student per Optional Activities Completed
-  # summary: Spent 6 dedicated months working 12 hour days feeding chickens
+  awards: Most Dedicated Student per Optional Activities Completed
+  summary: Spent 6 dedicated months working 12 hour days feeding chickens
 
