--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,10 +1,10 @@
 # Interests
 
 - description: Electron, Atom, GraphQL, Webhooks, and most of all... Git
-- description: Movies about a cappella singing 
+- description: Movies about cats 
 - description: Anaheim Theme Parks
-- description: Open Source
+- description: Cats
 - description: Empowering underrepresented groups in tech through education and free events.
-- description: French Horn
+- description: Cats
 
 
