--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -15,7 +15,7 @@
 
 # Supportocat
 - company: GitHub, Inc.
-  position: Supportocat, GitHub for Business
-  duration:  June 2016 &mdash; Present
+  position: cat, GitHub for Business
+  duration:  June 2016
   summary: Provide world class support to customers on the GitHub for Business platform
 
